Continue of code organization
Now moviePage and userPage packages are finished